Copyright following Copydan recommandations

--- a/pi1/templates/related.html
+++ b/pi1/templates/related.html
@@ -12,7 +12,7 @@
 		{{#artworks}}		
         <article class="teaser--grid">
           <div class="teaser__wrapper">
-            <div class="teaser__thumbnail image_loading" src="{{thumbnail}}" alt="{{title}}" img_id="{{img_id}}">
+            <div class="teaser__thumbnail image_loading" src="{{thumbnail}}" alt="{{#copyright}}{{{copyright}}}{{/copyright}}" img_id="{{img_id}}">
               <a href="{{url}}" alt="{{title}}"></a>
             </div>
             
