--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -7,11 +7,11 @@
 {{#media}}
 	<div id="media-container">
 	  <div class="gallery">
-	    <div class="gallery__main image_loading" src="{{image}}" title="{{title}}" alt="{{title}}" img_id="{{img_id}}"></div>
+	    <div class="gallery__main image_loading" src="{{image}}" title="{{title}}" alt="{{#copyright}}{{{copyright}}}{{/copyright}}" img_id="{{img_id}}"></div>
 	
 	    <!-- Copyright notice -->
 		{{#copyright}}
-	    <div class="gallery__copyright">&copy;&nbsp;{{copyright}}</div>
+	    <div class="gallery__copyright">{{{copyright}}}</div>
 		{{/copyright}}
 	
 		<!-- thumbnails -->
