Links to social media

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -26,10 +26,10 @@
 	
 	  <!-- Sharing links -->
 	  <div class="sharing--iconified">
-	    <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u=INSERT_URL">Share on Facebook</a>
-	    <a target="_blank" href="https://twitter.com/intent/tweet?text=INSERT_DESCRIPTION&amp;url=INSERT_URL&amp;via=INSERT_TWITTER_HANDLE">Tweet This</a>
-	    <a target="_blank" href="https://plus.google.com/share?url=INSERT_URL">Plus on Google+</a>
-	    <a target="_blank" href="http://pinterest.com/pin/create/button/?url=INSERT_URL&amp;description=INSERT_DESCRIPTION">Pin on Pinterest</a>
+	    <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u={{image}}">Share on Facebook</a>
+	    <a target="_blank" href="https://twitter.com/intent/tweet?text=StatensMuseumForKunst - {{title}}&amp;url={{image}}&amp;via=StatensMuseum">Tweet This</a>
+	    <a target="_blank" href="https://plus.google.com/share?url={{image}}">Plus on Google+</a>
+	    <a target="_blank" href="http://pinterest.com/pin/create/button/?url={{image}}&amp;description=StatensMuseumForKunst - {{title}}">Pin on Pinterest</a>
 		<a target="_blank" onclick="window.print()">Print</a>
 	  </div>
 	
