Teasers: Collection's labels

--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -22,7 +22,7 @@
               <ul class="teaser__category">
                 {{#categories}}
                   <li>
-                    <a href="{{url}}">{{name}}</a>
+                    <a href="{{url}}">{{{name}}}</a>
                   </li>
                 {{/categories}}
               </ul>
