--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -3,7 +3,7 @@
 <script id="detailTemplate" type="text/template">
 
 {{#detail}}
-<a class="back-button" href="#" style="opacity: 1;">Back</a>
+<a class="back-button" href="#">Back</a>
 {{#media}}
 	<div id="media-container">
 	  <div class="gallery">
