Viewpicker: enhanced tooltip ("tooltipster")

--- a/pi1/templates/view_picker.html
+++ b/pi1/templates/view_picker.html
@@ -2,10 +2,10 @@
 	<script id="viewpickerTemplate" type="text/template">		 		
 		<form class="view-picker" method="post">			
 			  <input type="radio" name="view" value="grid" id="grid" checked />
-			  <label data-tip="{{{tip_text}}}" for="grid" class="grid">Grid</label>
+			  <label title="{{{tip_text_grid}}}" for="grid" class="grid tooltip">Grid</label>
 			
 			  <input type="radio" name="view" value="list" id="list" />
-			  <label data-tip="{{{tip_text}}}" for="list" class="list">List</label>			
+			  <label title="{{{tip_text_list}}}" for="list" class="list tooltip">List</label>			
 		</form>
 	</script>	
 </div>
