Detail: title in "img - alt"

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -7,7 +7,7 @@
 {{#media}}
 	<div id="media-container">
 	  <div class="gallery">
-	    <div class="gallery__main image_loading" src="{{image}}" title="{{title}}" alt="{{#copyright}}{{{copyright}}}{{/copyright}}" img_id="{{img_id}}"></div>
+	    <div class="gallery__main image_loading" src="{{image}}" title="{{title}}" alt="{{#copyright}}{{{copyright}}} - {{title}}{{/copyright}}" img_id="{{img_id}}"></div>
 	
 	    <!-- Copyright notice -->
 		{{#copyright}}
