Google analytics + social media

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -28,10 +28,10 @@
 	
 	  <!-- Sharing links -->
 	  <div class="sharing--iconified">
-	    <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?u={{image}}">Share on Facebook</a>
+	    <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=http://www.smk.dk/udforsk-kunsten/soeg-i-smk/">Share on Facebook</a>
 	    <a target="_blank" href="https://twitter.com/intent/tweet?text=StatensMuseumForKunst - {{title}}&amp;url={{image}}&amp;via=StatensMuseum">Tweet This</a>
-	    <a target="_blank" href="https://plus.google.com/share?url={{image}}">Plus on Google+</a>
-	    <a target="_blank" href="http://pinterest.com/pin/create/button/?image_url={{image}}&amp;url={{image}}&amp;description=StatensMuseumForKunst - {{title}}">Pin on Pinterest</a>
+	    <a target="_blank" href="https://plus.google.com/share?url=http://www.smk.dk/udforsk-kunsten/soeg-i-smk/">Plus on Google+</a>
+	    <a target="_blank" href="http://pinterest.com/pin/create/button/?image_url={{image}}&amp;url=http://www.smk.dk/udforsk-kunsten/soeg-i-smk/">Pin on Pinterest</a>
 		<a target="_blank" onclick="window.print()" class="print">Print</a>
 	  </div>
 	
