--- a/pi1/templates/chosen.html
+++ b/pi1/templates/chosen.html
@@ -3,7 +3,7 @@
     	{{#options}}
 		<h2 class="heading--widget">{{title}}</h2>
     	<div class="chosen--multiple chosen--open">
-	      	<select data-placeholder="{{title}}..." multiple>
+	      	<select data-placeholder="{{{search_lab}}}" multiple>
     	    	<option value=""></option>
         		{{#values}}
         			<option value="{{value}}">{{{text}}} {{#count}}({{count}}){{/count}}</option>
