--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -28,10 +28,10 @@
 	
 	  <!-- Sharing links -->
 	  <div class="sharing--iconified">
-	    <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=http://www.smk.dk/udforsk-kunsten/soeg-i-smk/">Share on Facebook</a>
-	    <a target="_blank" href="https://twitter.com/intent/tweet?text=StatensMuseumForKunst - {{title}}&amp;url={{image}}&amp;via=StatensMuseum">Tweet This</a>
-	    <a target="_blank" href="https://plus.google.com/share?url=http://www.smk.dk/udforsk-kunsten/soeg-i-smk/">Plus on Google+</a>
-	    <a target="_blank" href="http://pinterest.com/pin/create/button/?image_url={{image}}&amp;url=http://www.smk.dk/udforsk-kunsten/soeg-i-smk/">Pin on Pinterest</a>
+	    <a target="_blank" href="http://www.facebook.com/sharer/sharer.php?s=100&u={{{media.fb}}}">Share on Facebook</a>
+	    <a target="_blank" href="https://twitter.com/intent/tweet?url={{{media.twitter.url}}}&text={{{media.twitter.description}}}&amp;via=StatensMuseum">Tweet This</a>
+	    <a target="_blank" href="https://plus.google.com/share?url={{{media.google}}}">Plus on Google+</a>
+	    <a target="_blank" href="http://www.pinterest.com/pin/create/button/?url={{{media.pinterest.url}}}&media={{{media.pinterest.image}}}&description={{{media.pinterest.description}}}">Pin on Pinterest</a>
 		<a target="_blank" onclick="window.print()" class="print">Print</a>
 	  </div>
 	
