Search filters' label + focus on Searchbox on load

--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -18,6 +18,7 @@
 			</div>  
 			
 			<div id="search-filters">
+				<h2 class="heading--widgets"></h2>
 				<div id="artist_name_ss" class="search-filter"></div>								
 				<div id="artist_natio" class="search-filter"></div>
 				<div id="object_type" class="search-filter"></div>	
