--- a/pi1/css/smk_modif.css
+++ b/pi1/css/smk_modif.css
@@ -34,6 +34,14 @@
 */                
 }
 
+.heading--widgets {  
+  border: 0;
+  color: #A2A2A5;
+  margin-bottom: 1.25em;
+  padding-bottom: .45em;
+  border-bottom: 1px solid #ecedf2;
+}
+
 .highlight{
 	background-color: #FFF8AC;
 }
@@ -120,7 +128,7 @@ a span{
 }
 
 .chosen--multiple.chosen--open .chosen-drop .chosen-results {
-  max-height: 92px;
+  max-height: 99px;
 }
 
 .view #teaser-container-grid {
