fix bug in suURL on "fq:locals" parameters on selection of a category

--- a/pi1/css/smk_modif.css
+++ b/pi1/css/smk_modif.css
@@ -115,6 +115,10 @@ a span{
 
 /* Jacques' Code  modif */
 
+.teaser__category{
+    font-size: 0.78em;
+}
+
 .search-box {
     margin-bottom: 7px;
     margin-top: 0px;
