Teaser: lastupdate label on website results

--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -54,7 +54,16 @@
 				  	{{/location}}
 				  {{/is_artwork}}
                 {{/meta}}
-              </ul>							
+              </ul>	
+
+			  <!-- last update -->
+              <ul class="teaser__meta">                 
+				  {{#not_is_artwork}}
+				  	{{#lastupdate}}
+						<li><span>{{{key}}}</span>{{{value}}}</li>
+				  	{{/lastupdate}}
+				  {{/not_is_artwork}}                
+              </ul>								
 			 
 
             </div><!-- teaser__content -->
