[!!!][TASK] created 4 get_data classes related to Detail/Thums/Related/Teasers widget. The corresponding js classes must be added in TYPO3 config

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -40,7 +40,7 @@
 	  <h1 class="heading--m">{{{artist_data}}}</h1>
  	{{/artist}}
   
-	  <h1 class="heading--m"><i>{{title}}</i>,&nbsp;<span>{{artwork_date}}</span></h1>
+	  <h1 class="heading--m"><i>{{title}}</i><span>{{{artwork_date}}}</span></h1>
 	
 	  <div class="cutoff">{{description}}</div>
 
