[FEATURE] info window moved from HTML's body to <smk_search_wrapper>

--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -38,14 +38,15 @@
 	
 	<script id="infoTemplate" type="text/template">
 	
-		<div id="smk_search_info" style="max-width: 300px; 
+		<div id="smk_search_info" style="
+					max-width: 300px; 
 					pointer-events: auto; 	
 					opacity: 0;				
 					transition: opacity 1s ease 1s;  
-					width: 301px; padding-left: 0px; 
+					width: 301px; 
+					padding-left: 0px; 
 					padding-right: 0px; 
-					top: 195px; 
-					left: 79px;" 
+					left: -310px;" 
 					class="tooltipster-base tooltipster-shadow tooltipster-fade tooltipster-fade-show">
 		    <div class="tooltipster-content">
 		        {{{info}}}
