[BUG] fixed information windows' width

--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -43,12 +43,12 @@
 					pointer-events: auto; 	
 					opacity: 0;				
 					transition: opacity 1s ease 1s;  
-					width: 301px; 
+					width: 20%; 
 					padding-left: 0px; 
 					padding-right: 0px; 
-					left: -310px;" 
+					left: -22%;" 
 					class="tooltipster-base tooltipster-shadow tooltipster-fade tooltipster-fade-show">
-		    <div class="tooltipster-content">
+		    <div class="tooltipster-content" style="font-size: 12px;">
 		        {{{info}}}
 		    </div>    
 		    <div style="height: 15%" class="tooltipster-arrow-left tooltipster-arrow">
