--- a/pi1/css/smk_modif.css
+++ b/pi1/css/smk_modif.css
@@ -150,6 +150,12 @@ a span{
 
 /* Jacques' Code  modif */
 
+.teaser__category a:hover, .teaser__category a:focus {
+    color: #A2A2A5;
+    text-decoration: none;
+    cursor:default;
+}
+
 .teaser__category{
     font-size: 0.78em;
 }
