[DRIFT] Thumbnails revamp - v1.0

--- a/pi1/templates/thumb.html
+++ b/pi1/templates/thumb.html
@@ -7,7 +7,7 @@
 		<div class="gallery__thumbnails">		  		   
 		  <ul>
 			{{#thumb}}	  
-	        <li src="{{image}}" alt="{{#copyright}}{{{copyright}}}&nbsp;-&nbsp;{{/copyright}}{{title}}"" img_id="{{img_id}}" class="image_loading">
+	        <li src="{{image}}" alt="{{img_id}}&nbsp;-&nbsp;{{#copyright}}{{{copyright}}}&nbsp;-&nbsp;{{/copyright}}{{title}}"" img_id="{{img_id}}" class="image_loading">
 	          <a href="#" {{#current}}class = "current"{{/current}}></a>
 	        </li>     
 			{{/thumb}} 
