[DRIFT] detailWidget - dimensions revamp

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -60,7 +60,7 @@
 	  <div class="data-pairs">
 	    <div class="data-pair">
 	      <div class="data-pair__key">{{key}}</div>											      		
-				<div class="data-pair__value">{{heigth}}{{width}}{{depth}}&nbsp;{{unit}}</div>			
+				<div class="data-pair__value">{{dim}}</div>			
 	    </div>	    
 	  </div><!-- data-pairs -->
 	  {{/dim}}	
