--- a/pi1/css/smk_modif.css
+++ b/pi1/css/smk_modif.css
@@ -77,6 +77,10 @@
 	height: 630px;
 }
 
+.cursor_on{
+	cursor: default;	
+}
+
 /* When the body has the loading class, we turn
    the scrollbar off with overflow:hidden */
 #smk_search_wrapper.modal_loading {
