--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -13,7 +13,7 @@
 	
 	    <!-- Copyright notice -->
 		{{#copyright_default}}
-	    	<div class="gallery__copyright"><a target="_blank" class="cursor_on" onclick="window.open('http://creativecommons.org/publicdomain/zero/1.0/')">{{{copyright}}}</a></div>
+	    	<div class="gallery__copyright"><a target="_blank" class="cc0" onclick="window.open('http://creativecommons.org/publicdomain/zero/1.0/')">&nbsp;</a></div>
 		{{/copyright_default}}
 		{{#copyright_valid}}
 	    	<div class="gallery__copyright">{{{copyright}}}</div>
