--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -32,7 +32,7 @@
               <h3 class="teaser__heading">
                	<!-- show an artwork -->
 				{{#is_artwork}} 
-					<a href="" alt="{{title}}" class="article_artwork">{{{artist_data}}}{{#title_pad}}<br>{{/title_pad}}{{title}}<span>{{{artwork_date}}}</span></a> 
+					<a href="{{url}}" alt="{{title}}" class="article_artwork">{{{artist_data}}}{{#title_pad}}<br>{{/title_pad}}{{title}}<span>{{{artwork_date}}}</span></a> 
 				{{/is_artwork}}
 				
 				<!-- not showing an artwork -->
