[BUG] fixed: when a search string is posted from TYPO3's frontpage

--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -29,6 +29,7 @@
 					</div>		  					      			  		   		   	  
 					<div id="smk_teasers"></div>		
 			   </section>
+				<div id="smk_search_version"></div>
 			</div>
 			<div class="modal"></div>
 		</div>
